try minima theme to see posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+theme: minima
 title: A bibliography
 description: A comprehensive bibliography of everything I've read.
 # These markdown options fix the autolinking of vimwiki links in github pages
