--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: riggraz/no-style-please
-# theme: jekyll-theme-minimal
+# remote_theme: riggraz/no-style-please
+theme: jekyll-theme-minimal
 # theme: minima
 # minima theme is _very_ minimal, good for testing. It shows posts in the _posts directory
 title: A bibliography
