added dash to title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: A bibliography -- no-style-please
+title: A bibliography --- no-style-please
 author: Riccardo Graziosi # name of site's author
 email: riccardo.graziosi97@gmail.com # email of site's author
 url: https://riggraz.dev/no-style-please # root address of the site
