--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -8,9 +8,9 @@ entries:
       - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
         url: false
       - title: github
-        url: https://github.com/riggraz/no-style-please
-      - title: used by riggraz.dev
-        url: https://riggraz.dev/
+        # url: https://github.com/riggraz/no-style-please
+      # - title: used by riggraz.dev
+        # url: https://riggraz.dev/
 
   - title: thoughts
     post_list: true
