--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,13 @@
-title: A bibliography --- no-style-please
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-# url: https://riggraz.dev/no-style-please # root address of the site
-description: > # A comprehensive bibliography of everything I've read.
-  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+title: Dynohub --- Bibliography repo
+author: dynohub # name of site's author
+email: dynohub@gmail.com # email of site's author
+url: https://dynohub.github.io # root address of the site
+description: > DYNOHUB is nothing more than a place to dump all the random
+  notes piling up on my hard drive. Mostly about cities. "Dynohub" was
+  originally the trademark name of hubs for bicycles made by Sturmey Archer
+  that generated power. This site is not about bicycle parts - here DYNOHUB is
+  a metaphor for cities. Get it?
+
 # These markdown options fix the autolinking of vimwiki links in github pages
 markdown: CommonMarkGhPages
 # see https://github.com/gjtorikian/commonmarker#parse-options
@@ -18,11 +22,11 @@ commonmark:
 
 permalink: /:slug.html
 
-favicon: "./logo.png" # relative path to site's favicon
+# favicon: "./logo.png" # relative path to site's favicon
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
 # theme: no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
-remote_theme: dynohub/no-style-please
+remote_theme: riggraz/no-style-please
 
 theme_config:
   back_home_text: ".." # customize text for homepage link in post layout
