--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Dynohub --- Bibliography repo
 author: dynohub # name of site's author
 email: dynohub@gmail.com # email of site's author
 url: https://dynohub.github.io # root address of the site
-description: > DYNOHUB is nothing more than a place to dump all the random
+description: > # DYNOHUB is nothing more than a place to dump all the random
   notes piling up on my hard drive. Mostly about cities. "Dynohub" was
   originally the trademark name of hubs for bicycles made by Sturmey Archer
   that generated power. This site is not about bicycle parts - here DYNOHUB is
