--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Dynohub --- Bibliography repo
+title: Dynohub
 author: dynohub # name of site's author
 email: dynohub@gmail.com # email of site's author
 url: https://dynohub.github.io # root address of the site
