--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ remote_theme: riggraz/no-style-please
 theme_config:
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
-  show_description: true # show blog description in home page
+  show_description: false # show blog description in home page
 
 sass:
   style: :compressed
